fixed period picker z-index

--- a/src/components/Chart/Chart.scss
+++ b/src/components/Chart/Chart.scss
@@ -47,6 +47,8 @@
   }
 
   &__period-picker {
+    position: relative;
+    z-index: 1;
     margin-top: 0.25rem;
     @include down($lg) {
       margin-right: auto;
